fixed newsroom post headings spacing

--- a/src/assets/styles/singlePost.scss
+++ b/src/assets/styles/singlePost.scss
@@ -8,6 +8,14 @@
                 line-height: 1.5rem;
             }
 
+            & h1,
+            h2,
+            h3,
+            h4,
+            h5 {
+                line-height: normal;
+            }
+
             & a {
                 text-decoration: underline;
                 font-weight: bold;
